# ai-company

./: .env.template  .gitignore  Dockerfile  README.md  ai-company.service  deploy-to-vps.sh  docker-compose.yml  install-watchdog.sh  migrate-to-host.sh  pyproject.toml  setup-venv.sh  watchdog.py
content-pipelines/: Makefile
dashboard/: Dockerfile  docker-compose.yml  pyproject.toml
dashboard/src/: app.py  data_service.py  models.py  ndjson_reader.py
dashboard/static/: app.js  index.html  style.css
dashboard/tests/: conftest.py
docs/: 00_vision.md  01_requirements.md  02_design.md  03_roadmap.md  decision-log.md
src/: adaptive_memory_store.py  agent_registry.py  ai_news_sns_publisher.py  alarm_scheduler.py  amendment.py  approval.py  approval_text_classifier.py  artifact_verifier.py  ascii4koma_to_svg.py  autonomous_loop.py  commitment_store.py  constitution_store.py  consultation_policy.py  consultation_store.py  context_builder.py  conversation_memory.py  cost_aggregator.py  creator_directive.py  creator_review_parser.py  creator_review_store.py  daily_brief_formatter.py  employee_store.py  event_deduper.py  git_publisher.py  heartbeat.py  initiative_planner.py  initiative_store.py  journal.py  llm_client.py  main.py  manager.py  manager.py.bak  manager_state.py  mcp_client.py  memory_index.py  memory_manager.py  memory_vault.py  model_catalog.py  models.py  ndjson_store.py  (+22 more)
tests/: conftest.py  test_agent_registry.py  test_ai_news_sns_publisher.py  test_alarm_scheduler.py  test_amendment.py  test_approval.py  test_approval_text_classifier.py  (+50 more)
tools/: ai  (+1 more)
(+31 files in other folders)
